# solid_recon

./: CMakeLists.txt  README.md
cmake/: jana_plugin.cmake  solid_reconConfig.cmake.in
src/algorithms/: CMakeLists.txt
src/algorithms/calorimetry/: CalorimeterIslandCluster.cc
src/algorithms/digi/: GEMTrackerDigi.cc  GEMTrackerDigi.h  GEMTrackerDigiConfig.h
src/algorithms/tracking/: CKFTracking.cc  SoLIDTrackSeeding.cpp  SoLIDTrackSeeding.h  SoLIDTrackSeedingConfig.h  TrackParamTruthInit.cc  TrackPropagation.cc  TrackSeeding.cc  TrackerMeasurementFromHits.cc
src/detectors/: CMakeLists.txt
src/detectors/FAEC/: FAEC.cc
src/detectors/GEMTRK/: GEMTRK.cc
src/detectors/LAEC/: LAEC.cc
src/factories/: CMakeLists.txt
src/factories/digi/: GEMTrackerDigi_factory.h
src/global/: CMakeLists.txt
src/global/reco/: reco.cc
src/global/tracking/: SoLIDTrackSeeding_factory.h  tracking.cc
src/services/: CMakeLists.txt
src/services/io/podio/: JEventProcessorPODIO.cc
src/utilities/: CMakeLists.txt
src/utilities/solid_recon/: CMakeLists.txt  solid_recon.cc  solidrecon_cli.cpp  solidrecon_cli.h
